<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/artImageView"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="26dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toTopOf="@+id/enterName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/enterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="Enter Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/enterArtistName"
        app:layout_constraintStart_toStartOf="@+id/artImageView"
        app:layout_constraintTop_toBottomOf="@+id/artImageView"
         />

    <EditText
        android:id="@+id/enterArtistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="Enter Artist"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/enterYear"
        app:layout_constraintStart_toStartOf="@+id/enterName"
        app:layout_constraintTop_toBottomOf="@+id/enterName"
        />

    <EditText
        android:id="@+id/enterYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:hint="Enter Year"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="@+id/enterArtistName"
        app:layout_constraintTop_toBottomOf="@+id/enterArtistName"
        />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="SAVE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterYear"
        />

</androidx.constraintlayout.widget.ConstraintLayout>